@@ -1,6 +1,8 @@
 Revision history for Perl extension TAP::Formatter::JUnit.
 
 0.07
+    - Fix RT#53927, "Times reported by T:F:JUnit for individual test cases in
+      a .t file are incorrect".  Thanks to Marc Abramowitz.
 
 0.06    Wed Jan 13 21:24 PST 2010
     - Fix bug in tap2junit which would cause multiple TAP streams to have the
